fix some spacing issues on PDF

--- a/extras.css
+++ b/extras.css
@@ -27,9 +27,6 @@ body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
 }
-main {
-  min-height: calc( 100vh - 6rem );
-}
 
 .d-flex {
   display: flex;
